# coding-agent

./: LICENSE  README.md  TEARDOWN.md  main.py  pyproject.toml
agent/: agent.py  events.py  session.py
client/: llm_client.py
config/: config.py  loader.py
context/: manager.py
prompts/: system.py
skills/: __init__.py  discovery.py  models.py  registry.py
tests/: test_skills.py
tools/: base.py  registry.py
ui/: tui.py
