[project]
name = "code-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "ddgs>=9.14.4",
    "fastmcp>=3.4.2",
    "openai>=2.44.0",
    "platformdirs>=4.10.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
    "tomli>=2.4.1",
]
